fixed spacing on about page

--- a/client/src/css/about.css
+++ b/client/src/css/about.css
@@ -33,23 +33,27 @@ padding-left: 20px;
 }
 @media screen and (min-width: 670px){
     .main-container{
+        display: flex;
         flex-direction: row;
-        max-width: 1000px;
+        max-width: 1400px;
         align-items: center;
-        justify-content: space-between;
+        gap:  10%;
     }
     .pitch{
         margin-top: 100px;
     }
     .pitch h1{ 
-        text-align:left;
+        text-align: left;
         font-size: 48px;
     }
     .pitch p{
-        text-align: left;
         font-size: 20px;
         line-height: 1.33;
-        max-width: 600px;
+        text-align: left;
+        max-width: 700px;
+        min-width: none;
+
+
 
     }       
 }
